--- a/views/words.erb
+++ b/views/words.erb
@@ -13,7 +13,9 @@
 <% end %>
 
 <a href="/words/new">Add a new word</a>
-
+<% @user_words.each do |word| %>
+  <li><a href="/words/<%= word.id %>"><%= word.word %></a></li>
+<% end %>
 <form action="/words">
   <div class="form-group">
     <label for="search">Search</label>
