--- a/views/word.erb
+++ b/views/word.erb
@@ -1,4 +1,4 @@
-<h2>Here is a word: <%= @word.word %>
+<h2>Here is a word: <%= @word_clicked.word %>
 
-<p><a href = "/words/<%=@word.id %>/edit">Edit word</a></p>
+<p><a href = "/words/<%=@word_clicked.id %>/edit">Edit word</a></p>
 <a href="/words">Back to the list</a>
