--- a/views/words.erb
+++ b/views/words.erb
@@ -4,8 +4,8 @@
 
 <% if @user_words.any? %>
   <ul>
-    <% @user_words.each do |input| %>
-      <li><%= input.word %></li>
+    <% @user_words.each do |word_clicked| %>
+      <li><a href="/words/<%= word_clicked.id %>"><%= word_clicked.word %></a></li>
     <% end %>
   </ul>
 <% else %>
@@ -13,9 +13,7 @@
 <% end %>
 
 <a href="/words/new">Add a new word</a>
-<% @user_words.each do |word| %>
-  <li><a href="/words/<%= word.id %>"><%= word.word %></a></li>
-<% end %>
+
 <form action="/words">
   <div class="form-group">
     <label for="search">Search</label>
