minor changes and typo fixes. Bug hunting

--- a/views/words.erb
+++ b/views/words.erb
@@ -5,7 +5,7 @@
 <% if @user_words.any? %>
   <ul>
     <% @user_words.each do |word_clicked| %>
-      <li><a href="/words/<%= word_clicked.id %>"><%= word_clicked.word %></a></li>
+      <li><a href="/words/<%= word_clicked.id %>"><%= word_clicked.name %></a></li>
     <% end %>
   </ul>
 <% else %>
@@ -14,10 +14,3 @@
 
 <a href="/words/new">Add a new word</a>
 
-<form action="/words">
-  <div class="form-group">
-    <label for="search">Search</label>
-    <input id="search" name="search" class="form-control" type="text">
-  </div>
-  <button type="submit" class="btn">Go!</button>
-</form>
