--- a/views/definition.erb
+++ b/views/definition.erb
@@ -1,5 +1,5 @@
 <h2>Definition: <%= @definition.name %></h2>
-
+<h3>Word: <%= @definition.word.word %></h3>
 
 <form action="/words/<%= @definition.word.id %>/definitions/<%= @definition.id %>" method="post">
   <input name="_method" type="hidden" value="patch">
@@ -16,3 +16,4 @@
   <button type="submit">Delete definition</button>
 </form>
 
+<a href="/words/<%= @definition.word.id %>">Back to <%= @definition.word.word %></a>
